Fleshing out detection classes & summaries more, fixing lljzip usage causing runtime exceptions