@@ -3,16 +3,20 @@ package me.cortex.jarscanner.scanner;
 import me.cortex.jarscanner.detection.Detection;
 import me.cortex.jarscanner.scanner.summary.JarScanSummary;
 import me.cortex.jarscanner.scanner.summary.RootScanSummary;
+import me.cortex.jarscanner.util.UncheckedSupplier;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
+import software.coley.llzip.format.ZipPatterns;
 
+import javax.annotation.Nonnull;
+import java.io.FileInputStream;
 import java.io.IOException;
+import java.io.InputStream;
 import java.nio.file.*;
 import java.nio.file.attribute.BasicFileAttributes;
 import java.util.ArrayList;
 import java.util.Collections;
 import java.util.List;
-import java.util.Set;
 import java.util.concurrent.CompletableFuture;
 import java.util.concurrent.ExecutorService;
 import java.util.concurrent.Executors;
@@ -40,9 +44,12 @@ public class RootScanner implements Scanner<RootScanSummary> {
 
     /**
      * @return Summary of all scan results in all jar files within the directory.
-     * @throws IOException When some irrecoverable IO issue occurred walking the file directories.
+     *
+     * @throws IOException
+     * 		When some irrecoverable IO issue occurred walking the file directories.
      */
-    public RootScanSummary runScan(Path rootDirectory) throws IOException {
+    @Nonnull
+    public RootScanSummary runScan(@Nonnull Path rootDirectory) throws IOException {
         List<JarScanSummary> jarScans = new ArrayList<>();
         ExecutorService scanPool = Executors.newFixedThreadPool(this.threads);
         JarScanner scanner = new JarScanner(this.detections);
@@ -50,7 +57,7 @@ public class RootScanner implements Scanner<RootScanSummary> {
         // Walk the file directories in the given path, recording all jars as a jar-scan task to complete later
         Files.walkFileTree(
                 rootDirectory,
-                Set.of(FileVisitOption.FOLLOW_LINKS),
+                Collections.singleton(FileVisitOption.FOLLOW_LINKS),
                 Integer.MAX_VALUE,
                 new JarFileVisitor(scanner, scanPool, jarScans)
         );
@@ -67,7 +74,7 @@ public class RootScanner implements Scanner<RootScanSummary> {
         }
 
         // Summarize info from all jar-summaries
-        return RootScanSummary.fromJarScans(jarScans);
+        return new RootScanSummary(jarScans);
     }
 
     private static class JarFileVisitor extends SimpleFileVisitor<Path> {
@@ -85,25 +92,34 @@ public class RootScanner implements Scanner<RootScanSummary> {
         public FileVisitResult visitFile(Path file, BasicFileAttributes attrs) {
             // Submit all jar files to the thread pool
             String pathNameInsensitive = file.toString().toLowerCase();
-            if (pathNameInsensitive.endsWith(".jar")) {
-                CompletableFuture.supplyAsync(() -> {
-                            try {
-                                return this.scanner.runScan(file);
-                            } catch (IOException e) {
-                                throw new RuntimeException(e); // fuck you checked exceptions
-                            }
-                        }, this.scanPool)
+            if (pathNameInsensitive.endsWith(".jar") || isZip(file)) {
+                CompletableFuture.supplyAsync((UncheckedSupplier<JarScanSummary>) () -> scanner.runScan(file), this.scanPool)
                         .whenComplete((jarScan, exception) -> {
                             if (jarScan != null) {
-                                logger.debug("Completed scan for jar: {} - [Detections={}, Problems={}]",
+                                logger.info("Completed scan for jar: {} - [Detections={}, Problems={}]",
                                         file, jarScan.getItems().size(), jarScan.getProblems().size());
-//                                this.jarScans.add(jarScan);
+                              this.jarScans.add(jarScan);
                             } else if (exception != null) {
                                 logger.warn("Error scanning jar: {}", file, exception);
                             }
                         });
             }
             return FileVisitResult.CONTINUE;
+        }
+
+        private static boolean isZip(@Nonnull Path path)  {
+            try {
+                byte[] buffer = new byte[4];
+                InputStream is = Files.newInputStream(path);
+                if (is.read(buffer) != buffer.length) {
+                    return false;
+                }
+                is.close();
+                return buffer[0] == ZipPatterns.PK[0] &&
+                        buffer[1] == ZipPatterns.PK[1];
+            } catch (Exception ex) {
+                return false;
+            }
         }
     }
 }
